fixing remaining links, linking proceedings form elib

--- a/src/content/2013.md
+++ b/src/content/2013.md
@@ -12,7 +12,7 @@ draft: false
 # Introduction
 The first SUMO User Conference "SUMO2013" was attended by 30 participants from throughout Europe which presented three days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation. The highlights were two keynote speakers, Christoph Sommer (Universitaet Innsbruck) and Kai Nagel (TU Berlin), which talked about the current developments in the simulation of vehicle communication, one of the main applications of SUMO, as well as experience with the development of MatSim. The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
-The [Springer postproceedings issue of LNCS](http://www.springer.com/de/book/9783662450789) is now online. The updated [conference proceedings](../documents/2013/SUMO2013_15-17May%202013_Berlin-Adlershof.pdf) are available for download as well.
+The [Springer postproceedings issue of LNCS](http://www.springer.com/de/book/9783662450789) is now online. The updated [conference proceedings](https://elib.dlr.de/97715/1/Proceeding_SUMO2013_15-17May%202013_Berlin-Adlershof.pdf) are available for download as well.
 
 All those who contributed to the SUMO2013 conference: Thank you for all your excellent work!
 
