--- a/src/content/2014.md
+++ b/src/content/2014.md
@@ -10,7 +10,7 @@ draft: false
 ---
 
 # Introduction
-The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](../documents/2014/Proceeding_SUMO2014_15+16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings).
+The SUMO2014 Conference was attended by over 50 participants from throughout Europe and America which presented two days of simulation results but also technical enhancements and new usage scenarios of the open source microscopic traffic simulation ([Here](https://elib.dlr.de/97717/1/Proceeding_SUMO2014_15%2B16May2014_Berlin-Adlershof.pdf) you can find the conference proceedings).
 A highlight was the keynote speaker Mario Krumnow (Technical University Dresden), who talked about "Modeling Mobility with Open Data" (here you can find his [presentation](../documents/2014/Presentation_Keynote_Open%20data%202014_MarioKrumnow.pdf) and [simulation](../documents/2014/Krumnow-Simulation.zip)).
 The program was rounded off by numerous discussions on the edge and a panel discussion, which will promote further exchanges among other simulation scenarios.
 
@@ -89,7 +89,7 @@ Please find below the sessions of the conference with presentations linked where
 # Conference Information
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planing and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open, SUMO is also ready to implement new behavioral models or to control the simulation remotely using various programming environments.
 
-These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <http://sumo-sim.org/>.
+These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <https://sumo.dlr.de/>.
 
 # Contact
 Please contact the conference team via mail at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de)
