--- a/src/content/2016.md
+++ b/src/content/2016.md
@@ -11,8 +11,8 @@ draft: false
 ---
 
 <div class="btn-group" style="margin-bottom:40px;">
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=355744&docid=10480&rn=4cd3253a-649d-4fe5-9154-52e4e8e2e803" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Proceedings (23.48 MB)</a>
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=354349&docid=10466&rn=a6683f08-7102-4dcf-8e87-3d818f48f30a" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Program (0.77 MB)</a>
+  <a href="https://elib.dlr.de/106342/1/SUMOconference_proceedings_2016.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Proceedings (23.48 MB)</a>
+  <a href="../documents/2016/SUMO2016_program.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Program (0.77 MB)</a>
 </div>
 
 # Introduction
