--- a/src/content/2017.md
+++ b/src/content/2017.md
@@ -11,8 +11,8 @@ draft: false
 ---
 
 <div class="btn-group" style="margin-bottom:40px;">
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=381026&docid=10872&rn=0130dfed-c5cc-4631-97dc-7fa360122297" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Proceedings (21.07 MB)</a>
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=417630&docid=11276&rn=ece94a40-92ca-49ad-b54b-ec5b96ce02e9" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Flyer (5.06 MB)</a>
+  <a href="https://elib.dlr.de/118438/1/SUMO_proceedings_online.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Proceedings (21.07 MB)</a>
+  <a href="../documents/2017/flyer_sumo_2017.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Flyer (5.06 MB)</a>
 </div>
 
 # Introduction
