--- a/src/content/2015.md
+++ b/src/content/2015.md
@@ -10,8 +10,8 @@ draft: false
 ---
 
 <div class="btn-group" style="margin-bottom:40px;">
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=328402&docid=9956&rn=9e98c756-53c6-4951-9fb2-17629c9f2002" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2015 Proceedings (17.07 MB)</a>
-  <a href="https://www.dlr.de/ts/en/DownloadCount.aspx?raid=325512&docid=9895&rn=cb9fc382-3ede-456c-9f66-3e6d1414aa72" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2015 Flyer (1.42 MB)</a>
+  <a href="https://elib.dlr.de/97714/1/SUMO2015_Proceeding.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2015 Proceedings (17.07 MB)</a>
+  <a href="../documents/2015/SUMO2015.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2015 Flyer (1.42 MB)</a>
 </div>
 
 # Introduction
