fixing broken links

--- a/src/content/2022.md
+++ b/src/content/2022.md
@@ -119,7 +119,7 @@ The agent-based  demand model TAPAS is an open source development of DLR’s Ins
 
 Within the talk, the functioning of TAPAS will be presented as well as different application scenarios, ranging from public transport pricing, installation of demand-responsive transport to air quality measures on city scale.
 
-<a href="https://www.dlr.de/vf/en/desktopdefault.aspx/tabid-12751/22270_read-29381/" class="btn btn-sm btn-outline-info" style="margin-top:10px;">About TAPAS</a>
+<a href="https://verkehrsforschung.dlr.de/de/projekte/tapas-modell-fuer-die-zukuenftige-nachfrage-des-personenverkehrs-im-urbanen-raum" class="btn btn-sm btn-outline-info" style="margin-top:10px;">About TAPAS</a>
 <a href="https://github.com/DLR-VF/TAPAS" class="btn btn-sm btn-outline-info" style="margin-top:10px;">GitHub repository</a>
 
 # Social Event
