--- a/src/content/2024.md
+++ b/src/content/2024.md
@@ -14,13 +14,13 @@ aliases:
 
 # Proceedings
 
-Conference Proceedings: *Coming soon*    
-DOI: *Coming soon*
+Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/29    
+DOI: https://doi.org/10.52825/scp.v5i
 
 # Sessions and Presentations
 - **Tutorial**
 <br>
-<a target="_blank" href="http://sumo.dlr.de/daily/sumo2024_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://youtu.be/9WCGxJDdY9s"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+<a target="_blank" href="http://sumo.dlr.de/daily/sumo2024_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://youtu.be/9WCGxJDdY9s"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="https://sumo.dlr.de/docs/Tutorials/2024.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
 
 - **Keynote:** Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute - *Dr. Steven Jones*
 <br>
