fixing links for some 2020 slides

--- a/src/content/2020.md
+++ b/src/content/2020.md
@@ -26,9 +26,9 @@ DOI: https://doi.org/10.52825/scp.v1i
 
 - Eclipse Foundation • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/EclipseFoundation-GaelBlondelle.pdf)
 - openADx Working Group • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/openADx-AndreasRiexinger.pdf)
-- Eclipse ADORe • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/Eclipse ADORe-DanielHess.pdf)
+- Eclipse ADORe • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/EclipseADORe-DanielHess.pdf)
 - openMobility Working Group • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/openMobility-RobertHilbrich.pdf)
-- Eclipse MOSAIC • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/Eclipse MOSAIC-RobertProtzmann.pdf)
+- Eclipse MOSAIC • [<i class="far fa-file-pdf"></i> Slides](../documents/2020/EclipseMOSAIC-RobertProtzmann.pdf)
 
 ---
 
@@ -130,7 +130,7 @@ We are going to have a fun SUMO-related quiz using [Menti](https://www.menti.com
     SUMO guru of the year 2020: m-kro.
 </div>
 
-(Check out the hall of fame, by pressing `Shift` + `F11` in sumo-gui 1.8.0 or newer)
+(Check out the hall of fame, by pressing <kbd>Shift</kbd> + <kbd>F11</kbd> in sumo-gui 1.8.0 or newer)
 
 # Language
 The conference language is English.
