--- a/src/content/2021.md
+++ b/src/content/2021.md
@@ -131,7 +131,7 @@ We are going to have a fun SUMO-related quiz using [Menti](https://www.menti.com
     SUMO guru of the year 2021: Lara Codeca.
 </div>
 
-(Check out the hall of fame, by pressing `Shift` + `F11` in sumo-gui 1.8.0 or newer)
+(Check out the hall of fame, by pressing <kbd>Shift</kbd> + <kbd>F11</kbd> in sumo-gui 1.8.0 or newer)
 
 # Prices
 Participation at this year's conference will be **free of charge**!
