--- a/src/content/2022.md
+++ b/src/content/2022.md
@@ -130,7 +130,7 @@ We are going to have a fun SUMO-related quiz using [Menti](https://www.menti.com
     SUMO guru of the year 2022: Dennis Harmann.
 </div>
 
-(Check out the current SUMO guru, by pressing `Shift` + `F11` in sumo-gui 1.8.0 or newer)
+(Check out the current SUMO guru, by pressing <kbd>Shift</kbd> + <kbd>F11</kbd> in sumo-gui 1.8.0 or newer)
 
 # Prices
 Participation at this year's conference will be **free of charge**!
