adding the 2025 videos and archive page

--- a/content/2025.md
+++ b/content/2025.md
@@ -8,37 +8,16 @@ layout: "single"
 image: "conference_2025.png"
 conference-page: true
 draft: false
-aliases:
-- /2025
 ---
-
-
-<!-- The SUMO User Conference, held every year in Berlin since 2013, is a must-attend event for anyone involved with SUMO. It gathers international participants from the industry, research and public institutions - to present (among others) projects, studies and advancements all around traffic, simulation and SUMO.
-
-The conference is a great place to learn about new features, network with fellow enthusiasts, ask the developers, have fruitful discussions, exchange ideas and even start collaborations! -->
-
-
-
-<!-- # FAQ
-
-<details>
-
-  <summary>Hello</summary>
-  World
-</details>
-<details>
-  <summary>Foo</summary>
-  Bar
-</details> -->
 
 # Sessions and Presentations
 - **Tutorial**
 <br>
-<a target="_blank" href="http://sumo.dlr.de/daily/sumo2025_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href=""><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="https://sumo.dlr.de/docs/Tutorials/2025.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
+<a target="_blank" href="http://sumo.dlr.de/daily/sumo2025_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://www.youtube.com/watch?v=ccc2mnGX_Mg"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="https://sumo.dlr.de/docs/Tutorials/2025.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
 
 - **Keynote:** Movement and waiting of crowds – state of the art models and data - *Prof. Dr. Armin Seyfried*
 <br>
-<a target="_blank" href=""><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+<a target="_blank" href="https://www.youtube.com/watch?v=HQVxg43URQ0"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
