adding the 2025 proceedings

--- a/content/2025.md
+++ b/content/2025.md
@@ -10,6 +10,11 @@ conference-page: true
 draft: false
 ---
 
+# Proceedings
+
+Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/182    
+DOI: https://doi.org/10.52825/scp.v6i
+
 # Sessions and Presentations
 - **Tutorial**
 <br>
