using the docsURL parameter in more places

--- a/content/2024.md
+++ b/content/2024.md
@@ -18,7 +18,7 @@ DOI: https://doi.org/10.52825/scp.v5i
 # Sessions and Presentations
 - **Tutorial**
 <br>
-<a target="_blank" href="http://sumo.dlr.de/daily/sumo2024_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://youtu.be/9WCGxJDdY9s"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="https://sumo.sourceforge.net/docs/Tutorials/2024.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
+<a target="_blank" href="http://sumo.dlr.de/daily/sumo2024_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://youtu.be/9WCGxJDdY9s"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="{{< docsurl >}}/Tutorials/2024.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
 
 - **Keynote:** Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute - *Dr. Steven Jones*
 <br>
