--- a/content/minutes/2025.md
+++ b/content/minutes/2025.md
@@ -46,10 +46,34 @@ draft: false
 
 ## Topics
 
-- running protocal instead of separate files
+- running protocol instead of separate files
   - link is missing
 - Meso - Parallelization as technology transfer idea
 - SUMO conference offer has been improved
 
 ## Issues
 - MacOS build needs doc for Parquet
+
+
+
+# 2025-10-23
+
+## Attendees
+
+- Angelo Banse (DLR)
+- Pablo Alvarez Lopez (DLR)
+- Michael Behrisch (DLR)
+- Yun-Pang Flötteröd (DLR)
+- Ronald Nippold (DLR)
+
+## Topics
+
+- protocol still needs to be linked from the main site (Angelo)
+- Zoom meeting needs co-hosts (Micha)
+- offline docs currently require network link
+- openlayers should be substituted locally
+- Font size on Gnome? Anton Gladky did a patch for the debian package, Ronald had the opposite experience (fonts too large by default)
+- Packaging strange dependencies in Fedora RPM
+  - Packaging might be abandoned we rather recommmend pip or flatpak
+- Release moved to 6.11.
+  - open issues to be discussed earlier because Jakob / Angelo are in a meeting on the 6th
