--- a/content/minutes/2025.md
+++ b/content/minutes/2025.md
@@ -73,6 +73,6 @@ draft: false
 - openlayers should be substituted locally
 - Font size on Gnome? Anton Gladky did a patch for the debian package, Ronald had the opposite experience (fonts too large by default)
 - Packaging strange dependencies in Fedora RPM
-  - Packaging might be abandoned we rather recommmend pip or flatpak
+  - Packaging might be abandoned we rather recommend pip or flatpak
 - Release moved to 6.11.
   - open issues to be discussed earlier because Jakob / Angelo are in a meeting on the 6th
