--- a/content/minutes/2025.md
+++ b/content/minutes/2025.md
@@ -8,6 +8,36 @@ draft: false
 
 
 
+# 2025-12-04
+
+## Attendees
+
+- Angelo Banse (DLR)
+- Pablo Alvarez Lopez (DLR)
+- Michael Behrisch (DLR)
+- Jakob Erdmann (DLR)
+- Yun-Pang Flötteröd (DLR)
+- Robert Hilbrich (DLR)
+- Ronald Nippold (DLR)
+- Peter Wagner (DLR)
+
+## Topics
+
+- Meeting on the 18th
+  - will take place
+- visualizing TAZ labels
+  - how to visualize sets of edges with a common label?
+- visualization discussions with Billy Charlton
+  - Angelo takes over
+- global building model
+  - https://tubvsig-so2sat-vm1.srv.mwn.de
+  - https://github.com/zhu-xlab/GlobalBuildingAtlas
+- netedit interface
+  - save all when saving neteditcfg?
+  - no one uses neteditcfg ;-)
+
+
+
 # 2025-11-20
 
 ## Attendees
