--- a/content/minutes/2026.md
+++ b/content/minutes/2026.md
@@ -9,3 +9,19 @@ draft: false
 
 
 # 2026-01-15
+
+
+<!-- ## Attendees
+
+- Pablo Alvarez Lopez (DLR)
+- Angelo Banse (DLR)
+- Michael Behrisch (DLR)
+- Jakob Erdmann (DLR)
+- Yun-Pang Flötteröd (DLR)
+- Robert Hilbrich (DLR)
+- Ronald Nippold (DLR)
+- Peter Wagner (DLR)
+
+## Topics
+
+ -->
