adding meeting minutes

--- a/content/minutes/2026.md
+++ b/content/minutes/2026.md
@@ -10,8 +10,7 @@ draft: false
 
 # 2026-01-15
 
-
-<!-- ## Attendees
+## Attendees
 
 - Pablo Alvarez Lopez (DLR)
 - Angelo Banse (DLR)
@@ -19,9 +18,18 @@ draft: false
 - Jakob Erdmann (DLR)
 - Yun-Pang Flötteröd (DLR)
 - Robert Hilbrich (DLR)
+- Daniel Krajzewicz (DLR)
 - Ronald Nippold (DLR)
-- Peter Wagner (DLR)
+- Kanagaraj Krishnamoorthy (Tetcos)
+- Vassileios Karagounis (CERTH)
+- Mario Krumnow (Schlothauer+Wauer)
+- Evangelos Mintsis (CERTH)
+- Mirko Barthauer (mouver)
+- Sasan Amini (Transcality)
 
 ## Topics
 
- -->
+- next release 1.26.0 may still work on the 26th of January
+- explaining the python wheels
+
+- Issues
