--- a/content/2013.md
+++ b/content/2013.md
@@ -30,7 +30,7 @@ Here are some impression of the SUMO2013
 # Conference Information
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planing and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open, SUMO is also ready to implement new behavioral models or to control the simulation remotely using various programming environments.
 
-These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <http://sumo.sf.net>.
+These and other features make SUMO one of the most used traffic simulations with a large and international user community. Further information about SUMO can be found at the project's web pages located at <https://eclipse.dev/sumo/>.
 
 The conference aims on exchanging experience in using SUMO, and presenting results or solutions obtained using the software. We expect a large variety of research topics and usage approaches. If you are doing a research project with SUMO and want to present your results please submit an abstract.
 
