--- a/content/2022.md
+++ b/content/2022.md
@@ -16,7 +16,7 @@ Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/8
 DOI: https://doi.org/10.52825/scp.v3i
 
 # Sessions and Presentations
-- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/urKtJj87X5M) • [<i class="far fa-file-archive"></i> Tutorial files](http://sumo.dlr.de/daily/sumo2022_tutorial.zip)
+- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/urKtJj87X5M) • [<i class="far fa-file-archive"></i> Tutorial files](https://sumo.dlr.de/daily/sumo2022_tutorial.zip)
 - Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](../documents/2022/chat_QA.txt)
 - **Keynote:** Simulating and modelling traffic: What are we trying to achieve? - *Heather Kaths* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/HBvuTjUy_kY)
 - TAPAS Workshop - *Matthias Heinrichs* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/twLLWBKRlbg)
