minutes of today

--- a/content/minutes/2026.md
+++ b/content/minutes/2026.md
@@ -8,6 +8,39 @@ draft: false
 
 
 
+# 2026-01-29
+
+## Attendees
+
+- Pablo Alvarez Lopez (DLR)
+- Angelo Banse (DLR)
+- Michael Behrisch (DLR)
+- Jakob Erdmann (DLR)
+- Yun-Pang Flötteröd (DLR)
+- Robert Hilbrich (DLR)
+- Daniel Krajzewicz (DLR)
+- Vassileios Karagounis (CERTH)
+- Ronald Nippold (DLR)
+- Peter Wagner (DLR)
+
+## Topics
+
+- release 1.26.0
+  - macOS packages need to be rebuild (huge in size due to proj)
+  - Java builds worked!
+- Java package versioning does not build snapshot anymore -> Robert opens issue
+- Next release is conference release
+  - collect important ideas
+  - intermodal routing / Taxi routing on different edges
+  - doing things without command line?
+  - drones
+- SUMO conference
+  - Please send current email addresses of contributors to Michael (if you know them and they differ from what is mentioned in AUTHORS)
+  - several workshops are being planned
+
+- Issues
+
+
 # 2026-01-15
 
 ## Attendees
