adding missing items for minutes

--- a/content/minutes/2026.md
+++ b/content/minutes/2026.md
@@ -37,6 +37,8 @@ draft: false
 - SUMO conference
   - Please send current email addresses of contributors to Michael (if you know them and they differ from what is mentioned in AUTHORS)
   - several workshops are being planned
+- SUMO movie script has a first draft
+- OSM has problems, we may use mirrors
 
 - Issues
 
