--- a/content/2016.md
+++ b/content/2016.md
@@ -13,6 +13,7 @@ draft: false
 <div class="btn-group" style="margin-bottom:40px;">
   <a href="https://elib.dlr.de/106342/1/SUMOconference_proceedings_2016.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Proceedings (23.48 MB)</a>
   <a href="../documents/2016/SUMO2016_program.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Program (0.77 MB)</a>
+  <a href="../documents/2016/sumo2016_tutorial.zip" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2016 Tutorial files (5 MB)</a>
 </div>
 
 # Introduction
