--- a/content/2017.md
+++ b/content/2017.md
@@ -11,8 +11,9 @@ draft: false
 ---
 
 <div class="btn-group" style="margin-bottom:40px;">
-  <a href="https://elib.dlr.de/118438/1/SUMO_proceedings_online.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Proceedings (21.07 MB)</a>
-  <a href="../documents/2017/flyer_sumo_2017.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Flyer (5.06 MB)</a>
+  <a href="https://elib.dlr.de/118438/1/SUMO_proceedings_online.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Proceedings (21 MB)</a>
+  <a href="../documents/2017/flyer_sumo_2017.pdf" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Flyer (5 MB)</a>
+  <a href="../documents/2017/sumo2017_tutorial.zip" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2017 Tutorial files (6 MB)</a>
 </div>
 
 # Introduction
