--- a/content/2018.md
+++ b/content/2018.md
@@ -10,6 +10,11 @@ conference-page: true
 draft: false
 ---
 
+<div class="btn-group" style="margin-bottom:40px;">
+  <a href="https://easychair.org/publications/volume/SUMO2018" class="btn btn-info btn-sm btn-padding"> SUMO 2018 Proceedings</a>
+  <a href="../documents/2018/sumo2018_tutorial.zip" class="btn btn-info btn-sm btn-padding"><i class="fas fa-file-download"></i> SUMO 2018 Tutorial files (13 MB)</a>
+</div>
+
 # Introduction
 Traffic simulations are of immense importance for researchers as well as practitioners in the field of transportation. SUMO has been available since 2001 and provides a wide range of traffic planning and simulation applications. SUMO consists of a suite of tools covering road network imports and enrichment, demand generation and assignment and a state-of-the-art microscopic traffic simulation capable to simulate private and public transport modes, as well as person-based trip chains. Being open source, SUMO is ready to implement new behavioral models or to control the simulation remotely using various programming environments. These and other features make SUMO one of the most often used open source traffic simulations with a large and international user community.
 
