--- a/content/2019.md
+++ b/content/2019.md
@@ -42,6 +42,7 @@ Instructions for authors and a template can be found here: <https://easychair.or
 - "limited" Student Grants - 50 EUR
 
 # Sessions and Presentations
+- Tutorial • [<i class="far fa-file-archive"></i> Tutorial files](../documents/2019/sumo2019_tutorial.zip)
 
 **Session 1: Automated Vehicles**
 
