--- a/content/2020.md
+++ b/content/2020.md
@@ -16,7 +16,7 @@ Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/4
 DOI: https://doi.org/10.52825/scp.v1i
 
 # Sessions and Presentations
-- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo) • [<i class="far fa-file-archive"></i> Tutorial files](https://sumo.dlr.de/daily/sumo2020_tutorial.zip)
+- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/aiOQbaB-pWo) • [<i class="far fa-file-archive"></i> Tutorial files](../documents/2020/sumo2020_tutorial.zip)
 - Ask us anything • [<i class="far fa-file-alt"></i> Q&A Transcript](../documents/2020/chat_QA.txt)
 - **Keynote:** Emerging mobility trends and the role of transport simulation models - *Jordi Casas* • [<i class="fab fa-youtube"></i> Video](https://www.youtube.com/watch?v=vJe-2T73UOg)
 
