--- a/content/2025.md
+++ b/content/2025.md
@@ -18,7 +18,7 @@ DOI: https://doi.org/10.52825/scp.v6i
 # Sessions and Presentations
 - **Tutorial**
 <br>
-<a target="_blank" href="https://sumo.dlr.de/daily/sumo2025_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://www.youtube.com/watch?v=ccc2mnGX_Mg"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="{{< docsurl >}}/Tutorials/2025.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
+<a target="_blank" href="../documents/2025/sumo2025_tutorial.zip"><span class="badge badge-secondary"><i class="far fa-file-archive"></i> Tutorial files</span></a> <a target="_blank" href="https://www.youtube.com/watch?v=ccc2mnGX_Mg"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a> <a target="_blank" href="{{< docsurl >}}/Tutorials/2025.html#transcription"><span class="badge badge-info"><i class="fa-solid fa-font"></i> Transcription</span></a>
 
 - **Keynote:** Movement and waiting of crowds – state of the art models and data - *Prof. Dr. Armin Seyfried*
 <br>
