--- a/content/2023.md
+++ b/content/2023.md
@@ -16,7 +16,7 @@ Conference Proceedings: https://www.tib-op.org/ojs/index.php/scp/issue/view/11
 DOI: https://doi.org/10.52825/scp.v4i
 
 # Sessions and Presentations
-- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/3J5KqOPT2qI) • [<i class="far fa-file-archive"></i> Tutorial files](https://sumo.dlr.de/daily/sumo2023_tutorial.zip)
+- Tutorial • [<i class="fab fa-youtube"></i> Video](https://youtu.be/3J5KqOPT2qI) • [<i class="far fa-file-archive"></i> Tutorial files](../documents/2023/sumo2023_tutorial.zip)
 - **Keynote:** e-bike-city: An answer to our transport dead-end? - *Prof. Dr. Kay W. Axhausen* • [<i class="fab fa-youtube"></i> Video](https://youtu.be/V8eXTufrSnA)
 
 ---
