moving all pdf to the the eclipse site

--- a/content/2024.md
+++ b/content/2024.md
@@ -31,17 +31,17 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Simulating Traffic Networks: Driving SUMO towards digital twins</b><br>
     Axel Schaffland, Jonas Nelson and Julius Schöning <i><small>(all: Hochschule Osnabrück)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides1-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/wZRyxqmnlHE"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides1-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/wZRyxqmnlHE"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Leveraging SUMO for Real-World Traffic Optimization: A Comprehensive Approach</b><br>
     Alon Bublil and Olga Dobrilko <i><small>(all: NoTraffic)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides1-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/9O5nh5xYGwc"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides1-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/9O5nh5xYGwc"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Calibration of Microscopic Traffic Simulation in an Urban Environment Using GPS-Data</b><br>
     Christopher Stang and Klaus Bogenberger <i><small>(all: Technical University of Munich)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides1-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/1BN2qVRKfsM"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides1-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/1BN2qVRKfsM"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
@@ -50,7 +50,7 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Sumonity: Bridging SUMO and Unity for Enhanced Traffic Simulation Experiences</b><br>
     Mathias Pechinger and Johannes Lindner <i><small>(all: Technical University of Munich)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides2-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/ADJTJWtZcJg"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides2-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/ADJTJWtZcJg"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Joining SUMO and Unreal Engine to Create a Bespoke 360 Degree Narrow Passage Driving Simulator</b><br>
     Peter Youssef, Katherine Plant and Ben Waterson <i><small>(all: University of Southampton)</small></i>
@@ -60,7 +60,7 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Integrating Topographical Map Information in SUMO to Simulate Realistic Micromobility Trips in Hilly and Steep Terrains</b><br>
     Andreas Freymann <i><small>(Fraunhofer IAO)</small></i>, Emanuel Reichsöllner <i><small>(Hochschule Esslingen)</small></i>, Damir Ravlija <i><small>(Hochschule Esslingen)</small></i>, Ingo Trautwein <i><small>(Fraunhofer IAO)</small></i> and Mirko Sonntag <i><small>(Hochschule Esslingen)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides2-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/Z80LM21o4a8"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides2-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/Z80LM21o4a8"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
@@ -85,12 +85,12 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Optimized Design of Low Emission Zones in SUMO: A Dual Focus on Emissions Reduction and Travel Time Improvement</b><br>
     Alvaro Paricio-Garcia, Miguel A. Lopez-Carmona and Pablo Manglano <i><small>(all: Universidad de Alcalá)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides4-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/CX-Kzt4VDgI"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides4-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/CX-Kzt4VDgI"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Comparing and parameterizing the electrical energy consumption models in SUMO</b><br>
     Yun-Pang Flötteröd, Michael Behrisch and Peter Wagner <i><small>(all: DLR)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides4-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/y8jYYUt6WP8"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides4-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/y8jYYUt6WP8"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>HybridPy: The Simulation Suite for Mesoscopic and Microscopic Traffic Simulations</b><br>
     Joerg Schweizer <i><small>(University of Bologna)</small></i>, Fabian Schuhmann <i><small>(Technical University of Munich)</small></i> and Cristian Poliziani <i><small>(Lawrence Berkeley National Lab)</small></i>
@@ -104,17 +104,17 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Bus Priority Procedure for Signalized Intersections Based on Bus Occupancy and Delay</b><br>
     Katia Juliane Schmidt, Natalie Steinmetz and Martin Margreiter <i><small>(all: Technical University of Munich)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides5-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/7vX6QsCTRR0"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides5-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/7vX6QsCTRR0"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>rescuePY: Simulation-based Rescue Response Impact Assessment</b><br>
     Fabian Schuhmann <i><small>(Technical University of Munich)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides5-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/bLpK6VeJ_Bo"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides5-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/bLpK6VeJ_Bo"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Generalistic Assessments of the Potential of Medical Drones in Urban Environment</b><br>
     Felix Wachter <i><small>(Hochschule Kempten)</small></i>, Jannik Krivohlavek <i><small>(University Medical Center Groningen)</small></i>, Jonas Rossa <i><small>(Hochschule Kempten)</small></i> and Andreas Rupp <i><small>(Hochschule Kempten)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides5-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/aWQ9jFg0_vo"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides5-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/aWQ9jFg0_vo"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
@@ -123,17 +123,17 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Using SUMO for Test Automation and Demonstration of Digitalized Railway Concepts</b><br>
     Arne Boockmeyer, Dirk Friedenberger and Lukas Pirl <i><small>(all: Hasso-Plattner-Institut)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides6-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/rzwhrCWz3zY"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides6-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/rzwhrCWz3zY"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Perspectives on an ALKS model in SUMO</b><br>
     Robert Alms, Benjamin Couéraud and Peter Wagner <i><small>(all: DLR)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides6-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/p-2pSIKw9CM"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides6-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/p-2pSIKw9CM"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>Calibrating Car-Following Models using SUMO-in-the-loop and Vehicle Trajectories from Roadside Radar</b><br>
     Maxwell Schrader, Arya Karnik, Alexander Hainen and Joshua Bittle <i><small>(all: The University of Alabama)</small></i> <span class="badge badge-success">Voted <b>best presentation</b> by the conference attendees</span>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides6-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/p8K6YJb6Vag"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides6-3.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/p8K6YJb6Vag"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
@@ -158,12 +158,12 @@ DOI: https://doi.org/10.52825/scp.v5i
 - <b>Integration Traffic Signal Control From Synchro to SUMO</b><br>
     Yiran Zhang <i><small>(University of Washington)</small></i>, Mingjian Fu <i><small>(INRIX Inc)</small></i> and Xuegang (Jeff) Ban <i><small>(University of Washington)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides8-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/vPXiAEW7Euw"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides8-1.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/vPXiAEW7Euw"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 <br><br>
 - <b>On Vehicular Data Aggregation in Federated Learning: A Case Study of Privacy with Parking Occupancy in Eclipse SUMO</b><br>
     Levente Alekszejenkó and Tadeusz Dobrowiecki <i><small>(all: Budapest University of Technology and Economics)</small></i>
     <br>
-    <a target="_blank" href="https://sumo.dlr.de/pdf/2024/slides8-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/MaXNuQ2RwxE"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
+    <a target="_blank" href="../documents/2024/slides8-2.pdf"><span class="badge badge-secondary"><i class="fa-solid fa-file"></i> Slides</span></a> <a target="_blank" href="https://youtu.be/MaXNuQ2RwxE"><span class="badge badge-danger"><i class="fab fa-youtube"></i> Video</span></a>
 
 ---
 
