--- a/content/minutes/2026.md
+++ b/content/minutes/2026.md
@@ -7,6 +7,39 @@ draft: false
 ---
 
 
+# 2026-02-12
+
+## Attendees
+
+- Pablo Alvarez Lopez (DLR)
+- Sasan Amini (Transcality)
+- Angelo Banse (DLR)
+- Michael Behrisch (DLR)
+- Jakob Erdmann (DLR)
+- Yun-Pang Flötteröd (DLR)
+- Robert Hilbrich (DLR)
+- Daniel Krajzewicz (DLR)
+- Vassileios Karagounis (CERTH)
+- Evangelos Mintsis (CERTH)
+- Ronald Nippold (DLR)
+- Peter Wagner (DLR)
+
+## Topics
+
+- release 1.26.0 feedback
+  - some 1.25 netedit regressions fixed just now
+  - python wheels are still incomplete (pypi limitation)
+- SUMO conference
+  - Please send current email addresses of contributors to Michael (if you know them and they differ from what is mentioned in AUTHORS)
+  - Deadline for Posters, Papers and Moments is the 22nd
+- SUMO movie script has a first draft
+  - Angelo will check
+- Webwizard (including osmGet) got an overhaul, please test
+- new emission model to be included by Evangelos
+  - more information next meeting and maybe separate meeting
+
+- Issues
+
 
 # 2026-01-29
 
@@ -34,6 +67,8 @@ draft: false
   - intermodal routing / Taxi routing on different edges
   - doing things without command line?
   - drones
+  - podcars
+  - vibe coding?
 - SUMO conference
   - Please send current email addresses of contributors to Michael (if you know them and they differ from what is mentioned in AUTHORS)
   - several workshops are being planned
